last fix (should work on Safari, Firefox, Chrome, etc)

--- a/assets/css/now-ui-kit.css
+++ b/assets/css/now-ui-kit.css
@@ -181,17 +181,19 @@ Colors
         width: 100%;
         /* max-width: 768px; */
         text-align: center;
-        margin: 2em auto;
+        padding: 2em auto;
+        /* background-color: greenyellow; */
         }
+        
         @media only screen and (min-width: 768px) {
         .cd-intro {
-            margin: 5em auto;
-        }
+            padding: 7em auto;
+            }
         }
         @media only screen and (min-width: 1170px) {
         .cd-intro {
-            margin: 8em auto;
-        }
+            padding: 12em auto;
+          }
         }
 
         .cd-headline {
